recursion.logo.koch.HexaKoch.scala.error
Erreur de compilation :
HexaKoch:18: error: not found: value droit
    droit(60)
    ^